# coflowSim_online

./: .gitignore  CMakeLists.txt  FB2010-1Hr-150-0.txt  README.md  client.sh  master.sh  tc.txt
build1/: 1520558285  1520559383  1520560192  4_1_24_0.txt  CMakeCache.txt  Makefile  cmake_install.cmake
build1/src/client/: Makefile
build1/src/common/: Makefile
build1/src/master/: Makefile
build2/: 1520558678  1520560132  CMakeCache.txt  Makefile  cmake_install.cmake
build2/src/client/: Makefile  cmake_install.cmake
build2/src/common/: Makefile  cmake_install.cmake
build2/src/master/: Makefile  cmake_install.cmake
client/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt
common/lib/: epollFunctions.h
common/socket/: sender.h
config/: client_config.json  machine_define.json  master.config  master_config.json
doc/: Diagram1.dia.autosave~  program_structure.autosave  program_structure.autosave~
docker/: Dockerfile
master/: CMakeLists.txt  main.cpp
master/coflowSim/: coflowSim.cpp  coflowSim.h
master/datastructures/: coflow.cpp  coflow.h  coflowCollection.cpp  coflowCollection.h  flow.cpp  flow.h  machine.cpp  machine.h  mapper.cpp  mapper.h  reducer.cpp  reducer.h
master/lib/: thread.h  threadpool.h
master/scheduler/: coflowManager.cpp  machineManager.cpp  machineManager.h  scheduler.cpp  scheduler.h
master/socket/: reciver.cpp  reciver.h  socketManage.cpp  socketManage.h
master/traceProducer/: CoflowBenchmarkTraceProducer.cpp  CoflowBenchmarkTraceProducer.h  TraceProducer.cpp  TraceProducer.h  producer.h
res/: machine_define.json  test.txt  test1.txt
share/: CMakeLists.txt
share/lib/: epollFunctions.cpp
share/socket/: socketManage.cpp  socketManage.h
src/client/: CMakeLists.txt  Listener.cpp  Listener.h  RecvManager.cpp  RecvManager.h  SendManager.cpp  SendManager.h  Sender.h  TrafficControlManager.cpp  TrafficControlManager.h  main.cpp  receFile.cpp  receFile.h  recvListen.h  sendFile.h
src/common/: CMakeLists.txt  library.cpp  library.h
src/common/lib/: ThreadPool.cpp  ThreadPool.h  epollFunctions.cpp  epollFunctions.h  locker.h  thread.h  threadclass.h  threadpool.h
src/common/socket/: sender.cpp  sender.h  socketManage.cpp  socketManage.h
src/common/webserver/: WebServer.cpp  WebServer.h  http_conn.cpp  http_conn.h
src/master/: CMakeLists.txt  main.cpp
src/master/datastructures/: coflow.cpp  coflow.h  coflowCollection.cpp  coflowCollection.h  flow.cpp  flow.h  machine.cpp  machine.h
src/master/handler/: CoflowJsonHandler.h  IndexHandler.h
src/master/scheduler/: MachineManager.cpp  MachineManager.h  Scheduler.cpp  Scheduler.h  coflowManager.h  machineManager.cpp  machineManager.h  scheduler.h
src/master/traceProducer/: CoflowBenchmarkTraceProducer.cpp  CoflowBenchmarkTraceProducer.h  producer.cpp  producer.h
web/pages/: Coflow.html
